--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,16 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.16.1",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/user-event": "13.5.0",
+    "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "firebase": "9.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6.3.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
-    "sass": "1.53.0",
+    "sass": "^1.43.4",
     "web-vitals": "2.1.4"
+  },
+  "optionalDependencies": {
+    "fsevents": "^2.1.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^7.2.1",
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,11 +29,9 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
+  "proxy": "http://backend:3000",
   "browserslist": {
     "production": [
       ">0.2%",
